Missed review remarks